# insure-pocket_back

./: .env  compare_coverage.py  db.py  main.py  pyproject.toml  requirements.txt  test.py
models/: categories.py  companies.py  coverage.py  diagnose.py  pockets.py  products.py  reports.py  subcategories.py  user_products.py  user_results.py  users.py
routers/: __init__.py  router_auth.py  router_diagnose.py  router_pockets.py  router_products.py  router_reports.py  router_users.py
